[package]
name = "binary"
version = "0.1.0"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
autobins = false

[dependencies]
bytes = "0.5.4"
ckb-vm = { path = "../ckb-vm", features = ["asm"] }

[[bin]]
name = "aot64"
path = "src/aot64.rs"

[[bin]]
name = "asm64"
path = "src/asm64.rs"

[[bin]]
name = "asm64_step"
path = "src/asm64_step.rs"

[[bin]]
name = "aot64_compile"
path = "src/aot64_compile.rs"

[[bin]]
name = "asm64_200"
path = "src/asm64_200.rs"

[[bin]]
name = "interpreter64"
path = "src/interpreter64.rs"

[[bin]]
name = "interpreter32"
path = "src/interpreter32.rs"
