[package]
name = "spike-sys"
description = "Rust bindings for spike"
version = "0.1.2"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
homepage = "https://github.com/nervosnetwork/ckb-vm-test-suite"
repository = "https://github.com/nervosnetwork/ckb-vm-test-suite"
exclude = ["riscv-isa-sim"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
